<resources>
    <string name="app_name">Blakkat</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="logo">logo</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_signup">signUp</string>
    <string name="signin_no_account_yet">No account yet ?</string>
    <string name="textview">TextView</string>
    <string name="not_viewed">Mark as viewed</string>
    <string name="viewed">Viewed on %1$s</string>
    <string name="title_activity_viewed">Viewed</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="takeMe">Take me to viewed medias !</string>

    <string name="user">user</string>
    <string name="pseudo">Pseudo</string>
    <string name="pseudo_welcome">Welcome, %1$s !</string>
    <string name="pseudo_wrong">Wrong pseudo</string>
    <string name="pseudo_exists">This pseudo already exists</string>
    <string name="pseudo_invalid">Invalid pseudo</string>
    <string name="pseudo_created">Be welcomed here forever, O secretary %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="signup_call_to_signin">SIGN IN</string>
    <string name="signup_already_account">Existing account ?</string>
    <string name="loading_text">%1$s Loading information…</string>
    <string name="main_menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_switch_jikan">Jikan - Enable +18 content</string>
    <string name="eighteen_mode_activated">+18 mode ACTIVATED don\’t browse Blakkat in a public space\nAre you really 18 or older ? ;)</string>
    <string name="eighteen_mode_desactivated">+18 mode DESACTIVATED</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="display_textView_synopsis">SYNOPSIS</string>
    <string name="button_return">Return</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_item">Search</string>
    <string name="action_search">action_search</string>
    <string name="action_home">action_home</string>

    <string name="channel_name">blakkat</string>
    <string name="channel_description">daily alert</string>
    <string name="notification_mode_activated">Notifications activated</string>
    <string name="notification_mode_desactivated">Notifications desactivated</string>

    <string name="mark_as_viewed">Mark as Viewed</string>
    <string name="searchMedias_checkBox_animes">Animes</string>
    <string name="searchMedias_checkBox_mangas">Mangas</string>
    <string name="searchMedias_checkBox_movies">Movies</string>
    <string name="searchMedias_checkBox_shows">Shows</string>
    <string name="searchMedias_switch_title">Get best results for title</string>
    <string name="searchMedias_switch_score">Get best results for score</string>

    <string name="date_timeline">Date</string>
    <string name="action_timeline">action_timeline</string>
    <string name="notifications">Enable Blakkat notifications</string>
    <string name="settingsActivity_userName">User informations</string>
    <string name="settingsActivity_textView_userSettings">User settings</string>

</resources>
