<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/custom_divider">

        <TextView
            android:id="@+id/settingsActivity_textView_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsActivity_userName"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/settingsActivity_editText_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/settingsActivity_textView_userSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settingsActivity_textView_userSettings"
            android:textSize="24sp" />

        <Switch
            android:id="@+id/settingsActivity_switch_jikan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_switch_jikan"
            android:textColor="#E91E63" />

        <Switch
            android:id="@+id/settingsActivity_switch_notifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications" />
    </LinearLayout>
</LinearLayout>