<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/signin_editText_pseudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pseudo"
                android:inputType="textPersonName"
                android:backgroundTint="#242323"/>

            <Button
                android:id="@+id/signin_button_signin"
                android:layout_width="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginTop="10dp"
                android:layout_height="35dp"
                android:background="@drawable/button_bg_rounded_corners"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/signin_textView_signup"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/signin_no_account_yet"
                android:textColor="#9B9B9B"
                android:textSize="20sp" />

            <Button
                android:id="@+id/signin_button_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/sign_up"
                android:textColor="#B40606"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>